# pagedfile

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  pagedfileConfig.cmake
include/: PathHelper.h
src/: BufferStreamBuf.cpp  CMakeLists.txt  PagedFile.cpp  PathHelper.cpp  main.cpp  pagedfileConfig.cmake
src/include/pagedfile/: BufferStreamBuf.h  PagedFile.h
src/src/: BufferStreamBuf.cpp  PagedFile.cpp  PathHelper.cpp  main.cpp  stdafx.h  version.h.in
